# packages/beff-wasm/fixtures/codegen-snaps/qualified-types/bff-generated/index.js
@@ -152,6 +152,31 @@ function validate_XYZ(input) {
     }
     return error_acc_0;
 }
+function validate_SomeType(input) {
+    let error_acc_0 = [];
+    if (typeof input == "object" && input != null) {
+        if (typeof input["id"] != "string") {
+            error_acc_0.push({
+                "error_kind": "NotTypeof",
+                "path": [
+                    "SomeType",
+                    "id"
+                ],
+                "received": input["id"],
+                "expected_type": "string"
+            });
+        }
+    } else {
+        error_acc_0.push({
+            "error_kind": "NotAnObject",
+            "path": [
+                "SomeType"
+            ],
+            "received": input
+        });
+    }
+    return error_acc_0;
+}
 const meta = [
     {
         "method_kind": "get",
@@ -197,6 +222,18 @@ const meta = [
             let error_acc_0 = [];
             error_acc_0.push(...add_path_to_errors(validate_XYZ(input), [
                 "[DELETE] /abc.response_body"
+            ]));
+            return error_acc_0;
+        }
+    },
+    {
+        "method_kind": "get",
+        "params": [],
+        "pattern": "/def",
+        "return_validator": function(input) {
+            let error_acc_0 = [];
+            error_acc_0.push(...add_path_to_errors(validate_SomeType(input), [
+                "[GET] /def.response_body"
             ]));
             return error_acc_0;
         }
@@ -295,6 +332,17 @@ const schema =  {
         },
         "required": [
           "a"
+        ],
+        "type": "object"
+      },
+      "SomeType": {
+        "properties": {
+          "id": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "id"
         ],
         "type": "object"
       },
@@ -400,6 +448,29 @@ const schema =  {
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/Def"
+                }
+              }
+            },
+            "description": "Successful Operation"
+          },
+          "422": {
+            "$ref": "#/components/responses/DecodeError"
+          },
+          "500": {
+            "$ref": "#/components/responses/UnexpectedError"
+          }
+        }
+      }
+    },
+    "/def": {
+      "get": {
+        "parameters": [],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SomeType"
                 }
               }
             },
