# packages/beff-wasm/fixtures/codegen-snaps/qualified-types/bff-generated/openapi.json
@@ -61,6 +61,17 @@
         ],
         "type": "object"
       },
+      "SomeType": {
+        "properties": {
+          "id": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "id"
+        ],
+        "type": "object"
+      },
       "UserEntityOriginal": {
         "properties": {
           "id": {
@@ -163,6 +174,29 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/Def"
+                }
+              }
+            },
+            "description": "Successful Operation"
+          },
+          "422": {
+            "$ref": "#/components/responses/DecodeError"
+          },
+          "500": {
+            "$ref": "#/components/responses/UnexpectedError"
+          }
+        }
+      }
+    },
+    "/def": {
+      "get": {
+        "parameters": [],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/SomeType"
                 }
               }
             },
