# packages/beff-wasm/fixtures/codegen-snaps/qualified-types/types5.ts
@@ -1,0 +1,9 @@
+export interface UserEntityOriginal {
+  id: string;
+}
+
+export namespace SomeNamespace {
+  export type SomeType = {
+    id: string;
+  };
+}
